# dirt

./: AGENTS.md  Cargo.toml  MODIFICATION_SUMMARY.md  PATH_FILTERING.md  README.md  debug_test.sh  test_path_filtering.sh
dirt/: Cargo.toml  build.rs
dirt-backend/: Cargo.toml
dirt-backend/src/: error.rs  shfs.rs
dirt-common/: Cargo.toml
dirt-common/src/: lib.rs
dirt-ebpf/: Cargo.toml
dirt-ebpf/src/: main.rs
dirt/src/: db.rs  error.rs  main.rs  queue.rs  scanner.rs  settings.rs  shfs.rs
examples/: allowed_paths.txt
rust-ebpf-shell/: Cargo.toml  README.md
rust-ebpf-shell/rust-ebpf-shell/: Cargo.toml  build.rs
rust-ebpf-shell/rust-ebpf-shell-common/: Cargo.toml
rust-ebpf-shell/rust-ebpf-shell-ebpf/: Cargo.toml  build.rs
rust-ebpf-shell/rust-ebpf-shell-ebpf/src/: main.rs
rust-ebpf-shell/rust-ebpf-shell/src/: main.rs
src/: Makefile  dirt.bpf.c  dirt.c  dirt.h  test_unlink  test_unlink.c
tests/: test_unix_socket.sh
