[package]
name = "dirt-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya", "serde", "serde_json"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[lib]
path = "src/lib.rs"
